# autofix-dojo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md
.github/workflows/: docker-publish.yaml
autofix/: __init__.py  cli.py  config.py  controller.py  dojo_client.py  fixer.py  git_client.py  models.py  slo_tracker.py
autofix/helm/: __init__.py  roadmap.py  scanner.py
autofix/web/: __init__.py  app.py
deploy/grafana/: dashboard.json
deploy/helm-chart/: Chart.yaml  values.yaml
deploy/helm-chart/crds/: autofixpolicy-crd.yaml
deploy/helm-chart/examples/: autofixpolicy-example.yaml  values-aws-eks.yaml  values-cronjob-only.yaml  values-homelab.yaml
deploy/helm-chart/templates/: _helpers.tpl  configmap.yaml  cronjob-helm-scan.yaml  cronjob-helm-upgrade-pr.yaml  cronjob-vuln-scan.yaml  deployment-web.yaml  deployment.yaml  ingress-web.yaml  pvc.yaml  rbac.yaml  secret.yaml  service-metrics.yaml  service-web.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docker/: Dockerfile
scripts/: seed_dojo.py  seed_dojo_client_demo.py
tests/: __init__.py  test_dojo_client.py  test_fixer.py  test_git_client.py
